<resources>

    <!--Appname-->
    <string name="app_name">LSF4Android</string>

    <!--Activityüberschriften-->
    <string name="ausfallende_V">Ausfallende Veranstaltungen</string>
    <string name="alle_V">Vorlesungsverzeichnis</string>
    <string name="eigene_V">Eigene Veranstaltungen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="grunddaten">Grunddaten</string>
    <string name="termine">Termine</string>
    <string name="inhalt">Inhalt</string>
    <string name="detail">Detailansicht</string>
    <string name="notification">NotificationActivity</string>
    <string name="detailFragment">DetailActivityWithFragments</string>
    <string name="navigation">NavigationActivity</string>

    <!--Tabellenüberschriften-->
    <string name="gruppe">Gr.</string>
    <string name="tag">Tag</string>
    <string name="zeit">Zeit</string>
    <string name="raum">Raum</string>
    <string name="lehrperson">Lehr-person</string>
    <string name="begin">Beginn</string>
    <string name="end">Ende</string>
    <string name="number">Nr.</string>
    <string name="title">Titel</string>

    <!--Button-->
    <string name="set_date">Set Date</string>


    <!--Anweisung-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_notification">Create Notification</string>
    <string name="deleteEntry">Einträge löschen</string>


    <string name="UR_Logo">Logo Universität Regensburg</string>

</resources>
