<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/termine_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/text_large"
        android:padding="@dimen/padding_x_large"
        android:textStyle="bold"
        android:background="@color/color_lsf4Android"
        android:textColor="@color/text_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_medium">
        <TextView
            android:id="@+id/group_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gruppe"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/day_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/tag"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/time_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/zeit"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/room_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/raum"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/teacher_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/lehrperson"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <ListView
        android:id="@+id/termine_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="@dimen/divider_hight"
        android:divider="@color/color_lsf4Android_opaque"
        android:layout_marginTop="@dimen/margin_x_x_large"
        ></ListView>
</LinearLayout>

<!--fertig-->