<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal">
    <ImageView
        android:id="@+id/uni_logo"
        android:layout_width="0dp"
        android:layout_height="@dimen/ur_logo_height"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_none"
        android:layout_marginRight="@dimen/margin_none"
        android:layout_marginTop="@dimen/margin_none"
        android:src="@mipmap/uni_logo"
        android:contentDescription="R.string.UR_Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
    <TextView
        android:id="@+id/caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/lsf4android_fontSize"
        android:textColor="@color/text_black"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uni_logo"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp" />
    <Button
        android:id="@+id/ausfallende_v_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_lsf4Android"
        android:textColor="@color/text_white"
        android:textSize="@dimen/homescreen_button_text"
        android:textAllCaps="false"
        android:text="@string/ausfallende_V"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:padding="@dimen/padding_large"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/caption"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.19999999" />
    <Button
        android:id="@+id/eigene_v_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_lsf4Android"
        android:textColor="@color/text_white"
        android:padding="@dimen/padding_large"
        android:textSize="@dimen/homescreen_button_text"
        android:textAllCaps="false"
        android:text="@string/eigene_V"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/ausfallende_v_button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ausfallende_v_button"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/ausfallende_v_button"
        app:layout_constraintHorizontal_bias="0.5" />
    <Button
        android:id="@+id/alle_v_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_lsf4Android"
        android:textColor="@color/text_white"
        android:padding="@dimen/padding_large"
        android:textSize="@dimen/homescreen_button_text"
        android:textAllCaps="false"
        android:text="@string/alle_V"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/eigene_v_button"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/eigene_v_button"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/eigene_v_button"
        app:layout_constraintHorizontal_bias="0.5" />
</android.support.constraint.ConstraintLayout>
